
VERSION 0.6.2-cvs
=================

2004-12-31  Vincent Richard  <vincent@vincent-richard.net>

 * Started version 0.6.2.


VERSION 0.6.1
=============

2004-12-27  Vincent Richard  <vincent@vincent-richard.net>

 * Added support for 'libtool'. All files needed for autoconf/automake
   can be generated with SConstruct script, using the 'autotools'
   target ("scons autotools"). These are also built and included
   automatically in the distribution tarball ("scons dist").

2004-12-26  Vincent Richard  <vincent@vincent-richard.net>

 * Removed relative paths from #include's and moved all header files
   to 'vmime/' directory.

 * Renamed main VMime include from 'vmime' to 'vmime.hpp'. So, in your
   program, you have to #include <vmime/vmime.hpp>.

 * Added support for 'pkg-config'.

 * Allow creating a service from an URL (session::getStore("url") and
   session::getTransport("url"))

2004-12-24  Vincent Richard  <vincent@vincent-richard.net>

 * Renamed class 'disposition' to 'contentDisposition' and the enum
   namespace 'dispositionTypes' to 'contentDispositionTypes'.

2004-12-23  Vincent Richard  <vincent@vincent-richard.net>

 * maildir: when connecting to the store, create root directory on the
   file system if it does not exist.

2004-12-22  Vincent Richard  <vincent@vincent-richard.net>

 * Fixed missing files in distribution (src/platform/*).

 * Fixed empty 'COPYING' file.

 * Started version 0.6.1.


VERSION 0.6.0
=============

2004-12-22  Vincent Richard  <vincent@vincent-richard.net>

 * Finished 'maildir' implementation. This is EXPERIMENTAL!

 * Added a getCapabilities() function on 'vmime::messaging::store' to
   quickly check which features are available.

 * New functions in 'component': getParsedOffset(), getParsedLength()
   and getChildComponents().

2004-12-19  Vincent Richard  <vincent@vincent-richard.net>

 * Added chaining in exception handling. vmime::exception::other() returns