@@ -2,6 +2,12 @@
 VERSION 0.6.2-cvs
 =================
 
+2005-01-01  Vincent Richard  <vincent@vincent-richard.net>
+
+ * Converted all C-style casts to C++-style casts.
+
+ * Added unit test for utility::md5.
+
 2004-12-31  Vincent Richard  <vincent@vincent-richard.net>
 
  * Started version 0.6.2.
